k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moviesearch-api
  labels:
    app: moviesearch-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moviesearch-api
  template:
    metadata:
      labels:
        app: moviesearch-api
    spec:
      containers:
      - name: moviesearch-api
        image: moviesearch-api:v3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        
        # Ovde dodajem resurse - ključno za HPA
        resources:
          requests:
            cpu: "100m"      # Minimalno rezerviše 0.1 CPU jezgra
            memory: "128Mi"  # Minimalno rezerviše 128MB RAM-a
          limits:
            cpu: "500m"      # Maksimalno sme da povuče 0.5 jezgra
            memory: "512Mi"  # Maksimalno sme da povuče 512MB RAM-a
