k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moviesearch-service
  labels:
    app: moviesearch-api
spec:
  type: LoadBalancer
  selector:
    app: moviesearch-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
