k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moviesearch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: moviesearch.local # Ovo će biti moja "lepa" adresa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moviesearch-service # Moj servis koji sam vec napravila
            port:
              number: 80
